--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<h1> This is a demo for CI/CD pipeline</h1>
+<html>
+<head>
+
+<h1 style="color:Tomato;">This is a demo for CI/CD pipeline </h1>
+
+</head>
+<body>
+
+<h2 style="color:DodgerBlue;">Demo for Network ACLS</h2>
+<h3 style="color:MediumSeaGreen;">Delivered webserver via Apache</h3>
+
+</body>
+</html>
